--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="meta-info">
             <span class="meta-tag">SYSTEM: ONLINE</span>
             <span class="meta-tag">CODE: ZF-2026</span>
-            <span class="meta-tag">AUTH: RANDY CHEN</span>
+            <span class="meta-tag">CREATOR: RANDY CHEN</span>
         </div>
         <h1><br>ZIpper Fin Manufacturing V2.3</h1>
     </header>
@@ -316,4 +316,5 @@
 </script>
 
 </body>
+
 </html>
